practice/day 1 notes/javac -d ..bin HelloWorld.java.txt
D:\core java\practice\day1\src>javac -d ../bin Sum.java

D:\core java\practice\day1\src>java -cp . Sum
Error: Could not find or load main class Sum
Caused by: java.lang.ClassNotFoundException: Sum

D:\core java\practice\day1\src>javac -d ../bin Sum.java
Sum.java:3: error: incompatible types: String cannot be converted to double
        double num1=(double) args[0];
                                 ^
1 error

D:\core java\practice\day1\src>


